# utfr_personal

./: .gitignore  .gitmodules  README.md  eval.sh  foxglove_lidar.json  learn  learn.cpp  pose_graph.g2o  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task-list.md
.github/workflows/: workflows.yaml
foxglove/: foxglove_p_sensors.json  perception_debug.json
scripts/: codespace_setup.sh  dv_bringup.sh  enable_can.sh  foxglove_vis.sh  p_full_bag.sh  p_full_bag_viz.sh  p_sensors_bag.sh  p_sensors_bag_viz.sh  p_viz_playback.sh  script_prep.txt  sensors_bag.sh  utfr_init  utfr_init.sh
src/car_interface/: CMakeLists.txt  package.xml
src/car_interface/config/: config.yaml
src/car_interface/include/: canbus_util.hpp  car_interface_node.hpp  heartbeat_monitor.hpp  sensor_util.hpp
src/car_interface/launch/: car_interface.launch.py
src/car_interface/src/: canbus_util.cpp  car_interface.cpp  car_interface_node.cpp  heartbeat_monitor.cpp  sensor_util.cpp
src/controls/: CMakeLists.txt  package.xml
src/controls/config/: config.yaml
src/controls/include/: controls_node.hpp
src/controls/include/controller/: pid_controller.hpp  pure_pursuit_controller.hpp
src/controls/launch/: controls.launch.py
src/controls/src/: controls.cpp  controls_node.cpp
src/controls/src/controller/: pid_controller.cpp  pure_pursuit_controller.cpp
src/controls/test/: controls_unit_tests.cpp
src/drivers/Xsens_MTi_ROS_Driver_and_Ntrip_Client/: README.md
src/drivers/lucid_ros/: CMakeLists.txt  package.xml
src/example/config/: config.yaml
src/example/include/: example_pub_node.hpp  example_sub_node.hpp
src/example/launch/: example_pub_launch.py  example_sub_launch.py
src/example/src/: example_pub.cpp  example_pub_node.cpp  example_sub.cpp  example_sub_node.cpp
src/jetson_interface/: CMakeLists.txt  package.xml
src/jetson_interface/config/: config.yaml
src/jetson_interface/include/: can_interface.hpp  jetson_interface_node.hpp
src/jetson_interface/launch/: jetson_interface.launch.py
src/jetson_interface/src/: can_interface.cpp  jetson_interface.cpp  jetson_interface_node.cpp
src/launcher/: CMakeLists.txt  package.xml
src/launcher/launch/: dv.launch.py  dv_accel.launch.py  dv_inspection.launch.py  interface.launch.py  p_debug.launch.py  p_sensors.launch.py  p_stack.launch.py  perception.launch.py  sensors.launch.py  sim.launch.py
src/launcher_dev/: CMakeLists.txt  package.xml
src/launcher_dev/launch/: p_debug.launch.py  sim.launch.py
src/lidar_pipeline/: CMakeLists.txt  CMakeLists_fail.txt  README.md  package.xml
src/lidar_pipeline/config/: config.yaml
src/lidar_pipeline/include/: clusterer.h  clusterer.hpp  cone_filter.h  cone_filter.hpp  filter.h
src/lidar_pipeline/launch/: lidar.launch.py
src/lidar_pipeline/src/: clusterer.cpp  cone_filter.cpp  filter.cpp  lidar_node.cpp
src/lidar_pipeline/test/: clusterer_test.cpp  filter_test.cpp
src/mapping/: CMakeLists.txt  package.xml
src/mapping/config/: config.yaml
src/mapping/eval/: test.py
src/mapping/include/: build_graph_node.hpp  compute_graph_node.hpp  ekf_node.hpp  kd_tree_knn.hpp  knn_node.hpp  preprocess_graph_node.hpp  vehicle_params.hpp
src/mapping/launch/: mapping.launch.py
src/mapping/src/: build_graph.cpp  build_graph_node.cpp  compute_graph.cpp  compute_graph_node.cpp  ekf.cpp  ekf_node.cpp  knn_node.cpp  preprocess_graph_node.cpp
src/mapping/test/: build_graph_tests.cpp  mapping_test.cpp
src/mapping/testing/: test.py
src/perception/: CMakeLists.txt  lidar_debug.rviz  package.xml  setup.py
src/perception/config/: config.yaml  extrinsics.json
src/perception/include/: clusterer.hpp  cone_filter.hpp  deep.hpp  filter.hpp  lidar_proc_node.hpp  perception_node.hpp
src/perception/launch/: extrinsics.launch.py  lidar_proc.launch.py  perception.launch.py  perception.launch.xml
src/perception/perception/: convert_to_tensorrt.py  model_check.py  perception_node.py  perception_summary.txt  test.py
src/perception/perception/models/: yolov10n.cache  yolov8n.cache
src/perception/perception/submodules/: classical.py  deep.py
src/perception/src/: clusterer.cpp  cone_filter.cpp  cpp_notes.txt  cv_notes.txt  deep.cpp  filter.cpp  lidar_proc.cpp  lidar_proc_node.cpp  perception_node.cpp  ros2_notes.txt  test.cpp  test_dnn.cpp
src/perception/test/: clusterer_test.cpp  filter_test.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/config/: config.yaml  waypoints.csv
src/planning/global_waypoints/: LeftCentre.csv  RightCentre.csv  Waypoints.csv
src/planning/include/: center_path_node.hpp  controller_node.hpp  path_optimization_node.hpp
src/planning/launch/: planning.launch.py
src/planning/points/: LeftCircle.csv  ReferencePoints.csv  RightCircle.csv  Waypoints.csv
src/planning/resource/: GGV.csv
src/planning/src/: acceleration.cpp  autocross_trackdrive.cpp  center_path.cpp  center_path_node.cpp  controller.cpp  controller_node.cpp  path_optimization.cpp  path_optimization_node.cpp  skidpad.cpp  testing.cpp
src/planning/test/: center_path_test.cpp  controller_test.cpp  path_optimization_test.cpp
src/utfr_common/: package.xml
src/utfr_common/include/: frames.hpp  math.hpp  topics.hpp
src/utfr_common/src/: math.cpp
src/utfr_common/test/: utfr_common_test.cpp
src/utfr_msgs/: CMakeLists.txt  package.xml
src/utfr_msgs/msg/: BoundingBox.msg  Cone.msg  ConeDetections.msg  ConeMap.msg  ControlCmd.msg  EgoState.msg  Heartbeat.msg  Jetson.msg  LapTime.msg  NavDebug.msg  ParametricSpline.msg  PlanningDebug.msg  (+10 more)
src/utfr_rviz_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/utfr_rviz_plugins/include/utfr_rviz_plugins/displays/cone_detections/: cone_detections_display.hpp
src/utfr_rviz_plugins/include/utfr_rviz_plugins/displays/cone_map/: cone_map_display.hpp
src/utfr_rviz_plugins/src/utfr_rviz_plugins/displays/cone_detections/: cone_detections_display.cpp
src/utfr_rviz_plugins/src/utfr_rviz_plugins/displays/cone_map/: cone_map_display.cpp
src/visualization/: package.xml  setup.py
(+25 files in other folders)
